--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Excel Party Name Translator</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+</head>
+<body style="font-family:Arial;padding:20px">
 
+<h2>Excel Party Name Hindi Translator</h2>
+
+<input type="file" id="upload" accept=".xlsx,.xls" />
+<br><br>
+<button onclick="processExcel()">Translate & Download</button>
+
+<script src="script.js"></script>
+</body>
+</html>
