--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Excel Party Name Translator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<meta charset="UTF-8">
+<title>Excel Hindi Party Name</title>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body style="font-family:Arial;padding:20px">
 
-<h2>Excel Party Name Hindi Translator</h2>
+<h3>Excel Party Name → Hindi</h3>
 
-<input type="file" id="upload" accept=".xlsx,.xls" />
+<input type="file" id="file" accept=".xlsx,.xls">
 <br><br>
-<button onclick="processExcel()">Translate & Download</button>
+<button onclick="convert()">Convert & Download</button>
 
 <script src="script.js"></script>
 </body>
