--- a/index.html
+++ b/index.html
@@ -2,70 +2,52 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Excel Hindi Converter</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<title>Excel Test Download</title>
+
+<!-- SheetJS -->
+<script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
 </head>
 
 <body style="font-family:Arial;padding:20px">
 
-<h2>Excel Party Name → Hindi</h2>
+<h2>Excel Upload → Modify → Download (TEST)</h2>
 
-<input type="file" id="fileInput" accept=".xlsx,.xls" />
+<input type="file" id="file" accept=".xlsx,.xls">
 <br><br>
-<button onclick="handleFile()">Convert & Download</button>
+<button onclick="run()">Process & Download</button>
 
 <script>
-function simpleHindi(text){
-  const map = {
-    "ram":"राम",
-    "kumar":"कुमार",
-    "sunil":"सुनील",
-    "sharma":"शर्मा"
-  };
-
-  let words = text.toLowerCase().split(" ");
-  return words.map(w => map[w] || w).join(" ");
-}
-
-function handleFile(){
-  const file = document.getElementById("fileInput").files[0];
-  if(!file){
+function run() {
+  const input = document.getElementById("file");
+  if (!input.files.length) {
     alert("File select karo");
     return;
   }
 
   const reader = new FileReader();
 
-  reader.onload = function(e){
-    const data = new Uint8Array(e.target.result);
-    const workbook = XLSX.read(data, {type:'array'});
-    const sheetName = workbook.SheetNames[0];
-    const sheet = workbook.Sheets[sheetName];
+  reader.onload = function(e) {
+    const workbook = XLSX.read(e.target.result, { type: "array" });
+    const sheet = workbook.Sheets[workbook.SheetNames[0]];
+    let data = XLSX.utils.sheet_to_json(sheet, { defval: "" });
 
-    let json = XLSX.utils.sheet_to_json(sheet);
+    // 🔴 COLUMN NAME – CHANGE ONLY IF NEEDED
+    const COL = "Party Name";
 
-    if(json.length === 0){
-      alert("Excel me data nahi hai");
-      return;
+    for (let i = 0; i < data.length; i++) {
+      if (data[i][COL]) {
+        data[i][COL] = "टेस्ट_" + data[i][COL];
+      }
     }
 
-    // 🔴 IMPORTANT: Column name yahin change karna hai agar alag ho
-    const columnName = "Party Name";
+    const newSheet = XLSX.utils.json_to_sheet(data);
+    const newWb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(newWb, newSheet, "Result");
 
-    json.forEach(row=>{
-      if(row[columnName]){
-        row[columnName] = simpleHindi(row[columnName]);
-      }
-    });
-
-    const newSheet = XLSX.utils.json_to_sheet(json);
-    const newWorkbook = XLSX.utils.book_new();
-    XLSX.utils.book_append_sheet(newWorkbook,newSheet,"Hindi");
-
-    XLSX.writeFile(newWorkbook,"Converted.xlsx");
+    XLSX.writeFile(newWb, "RESULT.xlsx");
   };
 
-  reader.readAsArrayBuffer(file);
+  reader.readAsArrayBuffer(input.files[0]);
 }
 </script>
 
